[package]
name = "fabric-roll"
version = "0.0.1"
authors = ["pfried <philipsfried@gmail.com>"]


[dependencies]
find_folder = "*"
conrod = "0.12.0"
piston = "0.10.1"
gfx = "0.7.0"
gfx_device_gl = "0.5.0"
piston-viewport = "0.1.0"
piston_window = "0.18.0"
piston2d-gfx_graphics = "0.7.0"
piston2d-opengl_graphics = "0.9.0"
pistoncore-glutin_window = "0.12.0"
